# Timagotchi

./: .replit  DEPLOYMENT.md  FBCP_RETROPIE_SETUP.md  README.md  config.py  configure_schedule.py  display.py  display_waveshare.py  games_config.py  input_handler.py  install.sh  main.py  menu.py  pyproject.toml  replit.md  requirements.txt  rtc.py  run_info.py  schedule-display.service  start.sh
old code/: config.py
